[package]
name = "monad-firewall-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
monad-firewall-common = { path = "../monad-firewall-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "monad-firewall"
path = "src/main.rs"
