[package]
name = "monad-firewall-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
aya-backend = ["dep:aya"]

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
anyhow = { workspace = true, default-features = true }
aya = { workspace = true, optional = true }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "timeout"] }
thiserror = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
serde_json = "1"

[lints]
workspace = true